    [expand] Fix for PR rtl-optimization/79121 incorrect expansion of extend plus left shift

When generating a shift from an extended value moving from one to two
    machine registers, the type of the right shift is for the most
    significant word should be determined by the signedness of the inner
    type, not the signedness of the result type.
    
    gcc:
	PR rtl-optimization/79121
	* expr.c (expand_expr_real_2, case LSHIFT_EXPR): Look at the signedness
	of the inner type when shifting an extended value.
    
    gcc/testsuite:
	* gcc.c-torture/execute/pr79121.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-6-branch@244702 138bc75d-0d04-0410-961f-82ee72b054a4